--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -11,4 +11,6 @@
 @import "contacts/contacts";
 @import "modal-request/modal-request";
 @import "modal-policy/modal-policy";
+@import "thanks-module/thanks-module";
+@import "404-module/404-module";
 @import "footer/footer";
