--- a/src/blocks/modules/footer/footer.pug
+++ b/src/blocks/modules/footer/footer.pug
@@ -1,5 +1,5 @@
 mixin footer({ className = false })
-    footer.footer   
+    footer.footer(class=className)
         .footer__container 
             .footer__row 
                 .footer__logo-col 
