--- a/src/blocks/modules/header/_header.scss
+++ b/src/blocks/modules/header/_header.scss
@@ -17,7 +17,7 @@
     color: $light;
     background: {
         color: $dark;
-        image: url(../img/intro_background.jpg);
+        image: url(../img/intro/background.jpg);
         size: cover;
         position: top center;
         attachment: fixed;
