--- a/src/blocks/modules/intro/data.pug
+++ b/src/blocks/modules/intro/data.pug
@@ -2,15 +2,15 @@
     const sliderInfo = [
         {
             imgName: "slider-1",
-            description: "Проводим отбор проб, испытания каменного угля и антрацита",
+            description: "Отбор проб угля, коса и другие продукты со штабеля, с вагонов по нормативным документам РК",
         },
         {
             imgName: "slider-2",
-            description: "Смолы каменноугольные и буроугольные: отбор, подготовка проб, зольность",
+            description: "Смолы каменноугольные и буроугольные: отбор, подготовка проб, зольность ",
         },
         {
             imgName: "slider-3",
-            description: "Уголь активированный (сорбенты – адсорбенты, абсорбенты) Гранулометрический состав, суммарный объем пор по воде, адсорбционная активность по йоду, температура воспламенения и самовоспламенения, взрывоопасность пыли",
+            description: "Уголь активированный (сорбенты – адсорбенты, абсорбенты) Гранулометрический состав, суммарный объем пор по воде и др.",
         },
         {
             imgName: "slider-4",
