--- a/src/blocks/modules/modal-request/modal-request.pug
+++ b/src/blocks/modules/modal-request/modal-request.pug
@@ -25,7 +25,7 @@ mixin modal-request({ className = false })
             })
             +input({
                 tag: 'textarea',
-                className: 'modal-request__input modal-request__textarea input_md input_gamma',
+                className: 'modal-request__input modal-request__textarea input_md input_textarea input_gamma',
                 placeholder: 'Кратко опишите вашу задачу'
             })
             fieldset.modal-request__form-footer
