--- a/src/blocks/modules/request/request.pug
+++ b/src/blocks/modules/request/request.pug
@@ -29,7 +29,7 @@ mixin request({ className = false })
                             })
                             +input({
                                 tag: 'textarea',
-                                className: 'request__textarea input_lg input_gamma',
+                                className: 'request__textarea input_lg input_textarea input_gamma',
                                 placeholder: 'Кратко опишите вашу задачу'
                             })
                         fieldset.request__form-footer
