--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,6 +1,9 @@
 extends layouts/default
 block variables
-	- const title = "Index page"
+	-
+		const title = "ТОО «Научно-исследовательский центр «Уголь» (ТОО «НИЦ «Уголь»)";
+		const page = "home";
+
 
 include ../blocks/pages/index/index
 
