--- a/src/blocks/components/nav/nav.pug
+++ b/src/blocks/components/nav/nav.pug
@@ -49,4 +49,4 @@ mixin nav({ className = false })
                             a.nav__link(class="nav__link_icon" href=`#${link.href}` data-close-menu)
                                 +icon({ className: 'nav__icon', iconName: link.iconName, viewBoxName: link.viewBoxName })
                         else
-                            a.nav__link(href=`#${link.href}` data-close-menu) !{link.title}
+                            a.nav__link(href=`/#${link.href}` data-close-menu) !{link.title}
