--- a/src/blocks/modules/intro/intro.scss
+++ b/src/blocks/modules/intro/intro.scss
@@ -97,7 +97,7 @@
     }
 
     &__gallery {
-        max-width: 240px;
+        max-width: 291px;
         margin-left: auto;
         margin-right: auto;
         @media (max-width: $break_md) {
@@ -112,22 +112,35 @@
                 display: flex !important;
                 align-items: center;
                 justify-content: center;
-                height: 240px;
+                height: 292px;
+                @media (max-width: $break_sm) {
+                    height: 190px;
+                }
             }
 
             &__img {
                 max-width: 100%;
                 max-height: 100%;
+                @media (max-width: $break_sm) {
+                    max-width: 142px;
+                    max-height: 190px;
+                }
             }
 
             &__rounds {
                 top: 150px;
+                @media (max-width: $break_sm) {
+                    top: 109px;
+                }
             }
         }
     }
 
     &__gallery-list {
         margin-bottom: 42px;
+        @media (max-width: $break_sm) {
+            margin-bottom: 0;
+        }
     }
 
     &__gallery-footer {
@@ -144,12 +157,31 @@
         bottom: 60px;
         left: 50%;
         transform: translateX(-50%);
+        transition: {
+            duration: 0.5s;
+            property: transform, color;
+        }
         @media (max-width: $break_lg) {
             bottom: 40px;
         }
         @media (max-width: $break_md) {
             bottom: 31px;
         }
+
+        &:hover {
+            color: $alpha;
+            transform: scale(1.1) translateX(-50%);
+        }
+
+        svg {
+            overflow: visible;
+        }
+    }
+
+    &__mouse-arrow {
+        animation-name: fadeInUp;
+        animation-duration: 1.5s;
+        animation-iteration-count: infinite;
     }
 
     &__mouse-icon {
@@ -168,5 +200,17 @@
         size: cover;
         position: top center;
         attachment: fixed;
+    }
+}
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translate3d(0, 40%, 0);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
     }
 }
