--- a/src/blocks/modules/request/request.scss
+++ b/src/blocks/modules/request/request.scss
@@ -145,7 +145,7 @@
         grid-column: 2;
         grid-row: 1 / 3;
         @media (max-width: $break_md) {
-            min-height: 170px;
+            height: 170px;
         }
     }
 
