--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -1,9 +1,3 @@
-block variables
-
-include ../helpers/mixins
-include ../../blocks/modules/header/header
-include ../../blocks/modules/footer/footer
-
 -
 	const config = {
 		socials: {
@@ -52,6 +46,12 @@ include ../../blocks/modules/footer/footer
 		],
 		slogan: 'ТОО &laquo;Научно-исследовательский центр &laquo;Уголь&raquo; (ТОО &laquo;НИЦ &laquo;Уголь&raquo;)'
 	}
+block variables
+
+include ../helpers/mixins
+include ../../blocks/modules/header/header
+include ../../blocks/modules/footer/footer
+
 
 doctype html
 html(lang="ru")
@@ -59,6 +59,12 @@ html(lang="ru")
 		meta(charset="utf-8")
 		meta(http-equiv="X-UA-Compatible" content="IE=edge")
 		title #{title}
+		meta(name="description" content="предлагает комплекс услуг по исследованию, испытанию, стандартизации и сертификации углей и продуктов их переработки по всему Казахстану")
+		meta(property="og:title" content=title)
+		meta(property="og:site_name" content="Kaleydoevomini")
+		meta(property="og:url" content="https://coal.bydex.ru/")
+		meta(property="og:description" content="предлагает комплекс услуг по исследованию, испытанию, стандартизации и сертификации углей и продуктов их переработки по всему Казахстану")
+		meta(property="og:image" content="img/opengraph.jpg")
 		meta(name="theme-color" content="#fff")
 		meta(name="apple-mobile-web-app-status-bar-style" content="black-translucent")
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
@@ -83,9 +89,11 @@ html(lang="ru")
 		link(href="./fonts/Montserrat-SemiBold.woff2" rel="preload" as="font" type="font/woff2" crossorigin="")
 		link(rel="stylesheet" href="styles/main.css")
 	body
-		.page-wrapper(id="home")
+		.page-wrapper(class=`${page !== "home" ? "page-wrapper_not-home" : ""}` id="home")
 			+header({})
 			main.main
 				block content
-			+footer({})
+			+footer({
+				className: page === "home" ? "footer_theme_alpha" : "footer_theme_light",
+			})
 		block scripts
